# stageviz

./: .gitignore  CMakeLists.txt  build_app.bat  build_app.sh  readme.md
modules/: FindOpenUSD.cmake
resources/: App.qss  AppIcon.bat  AppIcon.icns  AppIcon.psd  AppIcon.sh  PythonIcon.psd
scripts/: deploycheck.sh  deploydmg.sh  deploymac.sh  deployplugin.sh  deployxcode.sh
sources/: application.cpp  application.h  command.cpp  command.h  commandstack.cpp  commandstack.h  config.h.in  console.cpp  console.h  consoledialog.cpp  consoledialog.h  consoledialog.ui  consolewidget.cpp  consolewidget.h  consolewidget.ui  dockwidget.cpp  dockwidget.h  imagingglwidget.cpp  imagingglwidget.h  main.cpp  mime.h  mouseevent.cpp  mouseevent.h  notice.h  os.h  os_mac.mm  os_win.cpp  outlinerview.cpp  outlinerview.h  outlinerview.ui  primitem.cpp  primitem.h  progressitem.cpp  progressitem.h  progressview.cpp  progressview.h  progressview.ui  propertyitem.cpp  propertyitem.h  propertytree.cpp  (+63 more)
